fix: content showing behind sticky header

--- a/packages/components/src/styles/components/advanced-table.scss
+++ b/packages/components/src/styles/components/advanced-table.scss
@@ -105,7 +105,7 @@ $hds-advanced-table-cell-padding-tall: 22px 16px 21px 16px; // the 1px differenc
   // sticky header
   &.hds-advanced-table__thead--sticky {
     position: sticky;
-    top: -1px;
+    top: -2px;
   }
 
   &.hds-advanced-table__thead--sticky.hds-advanced-table__thead--is-pinned {
